--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ dependencies = [
     "python-multipart>=0.0.9",
     "supabase>=2.7.4",
     "fastapi>=0.112.2",
+    "sqlmodel>=0.0.22",
+    "asyncpg>=0.30.0",
+    "alembic>=1.14.0",
 ]
 
 [dependency-groups]
@@ -73,7 +76,7 @@ exclude_lines = [
     '\(Protocol\)=$',
     'typing.assert_never',
     'assert_never',
-    'if __name__ == .__main__.=',
+    'if __name__ == "__main__":',
 ]
 
 
