feat: add test_pre_start.py for testing connection of db

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "sqlmodel>=0.0.22",
     "asyncpg>=0.30.0",
     "alembic>=1.14.0",
+    "tenacity>=9.0.0",
 ]
 
 [dependency-groups]
