--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
     "pydantic-settings>=2.4.0",
     "python-multipart>=0.0.9",
     "supabase>=2.7.4",
-    "fastapi>=0.112.2",
+    "fastapi[standard]>=0.112.2",
     "sqlmodel>=0.0.22",
     "asyncpg>=0.30.0",
     "alembic>=1.14.0",
