--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,14 +2,12 @@
 name = "fastapi_supabase_template"
 version = "0.4.1"
 description = ""
-authors = [
-    {name = "Atticus.J.Zeller", email = "atticus.zeller@pm.me"},
-]
+authors = [{ name = "Atticus.J.Zeller", email = "hello@atticux.me" }]
 readme = "README.md"
 
 ## VCS
 [tool.git-cliff.remote.github]
-owner = "atticuszz"
+owner = "atticuszeller"
 repo = "fastapi_supabase_template"
 
 [tool.git-cliff.changelog]
@@ -61,24 +59,24 @@ split_commits = false
 # regex for preprocessing the commit messages
 commit_preprocessors = [
     # If the spelling is incorrect, it will be automatically fixed.
-    { pattern = '.*', replace_command = 'typos --write-changes -' }
+    { pattern = '.*', replace_command = 'typos --write-changes -' },
 ]
 # regex for parsing and grouping commits
 commit_parsers = [
-  { message = "^feat", group = "<!-- 0 -->🚀 Features" },
-  { message = "^fix", group = "<!-- 1 -->🐛 Bug Fixes" },
-  { message = "^doc", group = "<!-- 3 -->📚 Documentation" },
-  { message = "^perf", group = "<!-- 4 -->⚡ Performance" },
-  { message = "^refactor", group = "<!-- 2 -->🚜 Refactor" },
-  { message = "^style", group = "<!-- 5 -->🎨 Styling" },
-  { message = "^test", group = "<!-- 6 -->🧪 Testing" },
-  { message = "^chore\\(release\\)", skip = true },
-  { message = "^chore\\(deps.*\\)", skip = true },
-  { message = "^chore\\(pr\\)", skip = true },
-  { message = "^chore\\(pull\\)", skip = true },
-  { message = "^chore|^ci", group = "<!-- 7 -->⚙️ Miscellaneous Tasks" },
-  { body = ".*security", group = "<!-- 8 -->🛡️ Security" },
-  { message = "^revert", group = "<!-- 9 -->◀️ Revert" },
+    { message = "^feat", group = "<!-- 0 -->🚀 Features" },
+    { message = "^fix", group = "<!-- 1 -->🐛 Bug Fixes" },
+    { message = "^doc", group = "<!-- 3 -->📚 Documentation" },
+    { message = "^perf", group = "<!-- 4 -->⚡ Performance" },
+    { message = "^refactor", group = "<!-- 2 -->🚜 Refactor" },
+    { message = "^style", group = "<!-- 5 -->🎨 Styling" },
+    { message = "^test", group = "<!-- 6 -->🧪 Testing" },
+    { message = "^chore\\(release\\)", skip = true },
+    { message = "^chore\\(deps.*\\)", skip = true },
+    { message = "^chore\\(pr\\)", skip = true },
+    { message = "^chore\\(pull\\)", skip = true },
+    { message = "^chore|^ci", group = "<!-- 7 -->⚙️ Miscellaneous Tasks" },
+    { body = ".*security", group = "<!-- 8 -->🛡️ Security" },
+    { message = "^revert", group = "<!-- 9 -->◀️ Revert" },
 ]
 # filter out the commits that are not matched by commit parsers
 filter_commits = false
@@ -101,7 +99,7 @@ tag = true
 sign_tags = false
 tag_name = "v{new_version}"
 tag_message = "chore(release): {current_version} → {new_version}"
-allow_dirty = true # git-cliff first then bump patch
+allow_dirty = true                                                # git-cliff first then bump patch
 commit = true
 message = "chore(release): {current_version} → {new_version}"
 commit_args = ""
@@ -118,7 +116,6 @@ replace = 'version = "{new_version}"'
 filename = "CHANGELOG.md"
 search = "unreleased"
 replace = "{new_version} - {now:%Y-%m-%d}"
-
 
 
 # https://callowayproject.github.io/bump-my-version/reference/search-and-replace-config/
