--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,7 +18,6 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "anyio[trio]>=4.6.2.post1",
     "coverage>=7.6.1",
     "faker>=28.0.0",
     "mypy>=1.13.0",
@@ -42,7 +41,7 @@ exclude = ["venv", ".venv", "alembic"]
 # Ref: https://docs.pytest.org/en/stable/reference/reference.html#command-line-flags
 addopts = "-rXs --strict-config --strict-markers --tb=short"
 xfail_strict = true         # Treat tests that are marked as xfail but pass as test failures
-filterwarnings = ["error"]  # Treat all warnings as errors
+# filterwarnings = ["error"]  # Treat all warnings as errors
 pythonpath = "app"
 
 [tool.coverage.run]
