--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,6 +1,6 @@
 # A string used to distinguish different Supabase projects on the same host. Defaults to the
 # working directory name when running `supabase init`.
-project_id = "fastapi_supabase_template"
+project_id = "test"
 
 [api]
 enabled = true
