--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
           eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
       - name: Install pg deps
-        run: sudo apt-get update && apt-get install -y --no-install-recommends\
+        run: sudo apt-get update && apt-get install -y \
           libpq-dev \
           gcc \
           && rm -rf /var/lib/apt/lists/*
