--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,10 @@ jobs:
           /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
           eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
       - name: Install pg deps
-        run: sudo apt-get update && apt-get install -y \
+        run: sudo apt-get update && sudo apt-get install -y \
           libpq-dev \
           gcc \
-          && rm -rf /var/lib/apt/lists/*
+          && sudo rm -rf /var/lib/apt/lists/*
       - name: Install Supabase
         run: brew install supabase/tap/supabase
 
