devcontainer update and different environment setup

--- a/.gitignore
+++ b/.gitignore
@@ -123,7 +123,11 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-# .env
+.env
+.env.production
+.env.development
+.env.staging
+.env.test
 .venv
 env/
 venv/
