--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,15 @@ dev = [
     "httpx>=0.28.1",
 ]
 
+[project.optional-dependencies]
+test = [
+    "pytest>=7.4.0",
+    "pytest-asyncio>=0.21.1",
+    "httpx>=0.25.0",
+    "faker>=22.0.0",
+    "pytest-watch>=4.2.0",
+]
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
