--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -38,17 +38,31 @@
                     "/app"
                 ],
                 "python.linting.enabled": true,
-                "python.linting.flake8Enabled": true,
-                "python.formatting.provider": "black",
                 "editor.formatOnSave": true,
                 "editor.codeActionsOnSave": {
-                    "source.organizeImports": true
-                }
+                    "source.fixAll": "explicit",
+                    "source.organizeImports": "explicit"
+                },
+                "[python]": {
+                    "editor.defaultFormatter": "astral-sh.ruff-vscode",
+                    "editor.formatOnSave": true,
+                    "editor.formatOnPaste": false
+                },
+                "python.testing.pytestEnabled": true,
+                "python.testing.unittestEnabled": false,
+                "python.testing.nosetestsEnabled": false,
+                "ruff.enable": true,
+                "ruff.format.args": ["--select", "I"],
+                "python.analysis.autoImportCompletions": true,
+                "autoDocstring.docstringFormat": "google"
             },
             "extensions": [
                 "ms-python.python",
-                "ms-python.black-formatter",
-                "ms-python.flake8",
+                "ms-python.vscode-pylance",
+                "astral-sh.ruff-vscode",
+                "matangover.mypy",
+                "charliermarsh.pytest",
+                "njpwerner.autodocstring",
                 "github.vscode-github-actions"
             ]
         }
@@ -65,5 +79,5 @@
     "mounts": [
         "source=uv-cache,target=/app/.cache/uv,type=volume"
     ],
-    "postCreateCommand": "uv sync --frozen"
+    "postCreateCommand": "uv pip install pre-commit && uv sync --all-groups --dev && pre-commit install"
 }
