--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -79,5 +79,5 @@
     "mounts": [
         "source=uv-cache,target=/app/.cache/uv,type=volume"
     ],
-    "postCreateCommand": "uv pip install pre-commit && uv sync --all-groups --dev && pre-commit install"
+    "postCreateCommand": "pip install pre-commit && uv sync --all-groups --dev && pre-commit install"
 }
