--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,8 @@
         "PYTHONPATH": "/app",
         "UV_CACHE_DIR": "/app/.cache/uv",
         "UV_SYSTEM_PYTHON": "/usr/local/bin/python",
-        "UV_LINK_MODE": "copy"
+        "UV_LINK_MODE": "copy",
+        "PATH": "/home/vscode/.local/bin:${PATH}"
     },
     "customizations": {
         "vscode": {
@@ -79,5 +80,5 @@
     "mounts": [
         "source=uv-cache,target=/app/.cache/uv,type=volume"
     ],
-    "postCreateCommand": "pip install pre-commit && uv sync --all-groups --dev && pre-commit install"
+    "postCreateCommand": "pip install --user pre-commit && export PATH=/home/vscode/.local/bin:$PATH && uv sync --all-groups --dev && pre-commit install"
 }
