--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,8 +19,7 @@
         "PYTHONPATH": "/app",
         "UV_CACHE_DIR": "/app/.cache/uv",
         "UV_SYSTEM_PYTHON": "/usr/local/bin/python",
-        "UV_LINK_MODE": "copy",
-        "PATH": "/home/vscode/.local/bin:${PATH}"
+        "UV_LINK_MODE": "copy"
     },
     "customizations": {
         "vscode": {
@@ -80,5 +79,5 @@
     "mounts": [
         "source=uv-cache,target=/app/.cache/uv,type=volume"
     ],
-    "postCreateCommand": "pip install --user pre-commit && export PATH=/home/vscode/.local/bin:$PATH && uv sync --all-groups --dev && pre-commit install"
+    "updateContentCommand": "echo 'export PATH="$HOME/.local/bin:$PATH"' >> ~/.bashrc && pip install --user pre-commit && uv sync --all-groups --dev && pre-commit install"
 }
