--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,17 +3,9 @@
     "runArgs": [
         "--network=host"
     ],
-    // "dockerComposeFile": "../compose-ci.yaml",
-    // "service": "dev",
     "build": {
-        "dockerfile": "../Dockerfile",
-        "context": "..",
-        "args": {
-            "USERNAME": "vscode",
-            "USER_UID": "1000",
-            "USER_GID": "1000",
-            "BUILD_ENV": "dev"
-        }
+        "dockerfile": "Dockerfile.dev",
+        "context": ".."
     },
     "containerEnv": {
         "PYTHONPATH": "/app",
@@ -79,5 +71,5 @@
     "mounts": [
         "source=uv-cache,target=/app/.cache/uv,type=volume"
     ],
-    "updateContentCommand": "echo 'export PATH="$HOME/.local/bin:$PATH"' >> ~/.bashrc && pip install --user pre-commit && uv sync --all-groups --dev && pre-commit install"
+    "postCreateCommand": "pip install --user pre-commit && cd backend && uv sync --all-groups --dev && pre-commit install"
 }
