--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,38 +1,33 @@
 {
-    "name": "FastAPI Supabase Development",
-    "build": {
-        "dockerfile": "Dockerfile.dev",
-        "context": ".."
-    },
-    "customizations": {
-        "vscode": {
-            "settings": {
-                "terminal.integrated.defaultProfile.linux": "bash",
-                "python.defaultInterpreterPath": "/usr/local/bin/python",
-                "python.linting.enabled": true,
-                "python.linting.flake8Enabled": true,
-                "python.formatting.provider": "black",
-                "editor.formatOnSave": true,
-                "editor.codeActionsOnSave": {
-                    "source.organizeImports": true
-                },
-                "python.linting.flake8Args": [
-                    "--max-line-length=100"
-                ]
-            },
-            "extensions": [
-                "ms-python.python",
-                "ms-python.vscode-pylance",
-                "ms-python.flake8",
-                "ms-python.black-formatter",
-                "visualstudioexptteam.vscodeintellicode"
-            ]
-        }
-    },
-    "remoteUser": "vscode",
-    "updateRemoteUserUID": true,
-    "postCreateCommand": "pip install -e ./backend && pip install pre-commit && pre-commit install",
-    "waitFor": "onCreateCommand",
-    "forwardPorts": [8000],
-    "runArgs": ["--init"]
+  "name": "FastAPI Supabase Development",
+  "image": "mcr.microsoft.com/devcontainers/python:1-3.12-bullseye",
+  "features": {
+    "ghcr.io/devcontainers/features/node:1": {}
+  },
+  "customizations": {
+    "vscode": {
+      "settings": {
+        "python.defaultInterpreterPath": "/usr/local/bin/python",
+        "python.linting.enabled": true,
+        "python.linting.flake8Enabled": true,
+        "python.formatting.provider": "black",
+        "editor.formatOnSave": true,
+        "editor.codeActionsOnSave": {
+          "source.organizeImports": true
+        },
+        "python.linting.flake8Args": [
+          "--max-line-length=100"
+        ]
+      },
+      "extensions": [
+        "ms-python.python",
+        "ms-python.vscode-pylance",
+        "ms-python.flake8",
+        "ms-python.black-formatter",
+        "visualstudioexptteam.vscodeintellicode"
+      ]
+    }
+  },
+  "postCreateCommand": "pip install -e ./backend && pip install pre-commit && pre-commit install",
+  "remoteUser": "vscode"
 }
