--- a/.devcontainer/Dockerfile.dev
+++ b/.devcontainer/Dockerfile.dev
@@ -1,61 +1,32 @@
-FROM python:3.12-slim-bookworm
+FROM mcr.microsoft.com/devcontainers/python:1-3.12-bullseye
 
-# Print logs immediately
-ENV PYTHONUNBUFFERED=1
+# Avoid prompts during package installation
+ARG DEBIAN_FRONTEND=noninteractive
 
-# User setup
-ARG USERNAME=vscode
-ARG USER_UID=1000
-ARG USER_GID=1000
-
-# Prevent interactive prompts during build
-ENV DEBIAN_FRONTEND=noninteractive
-
-# Install system dependencies
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
-        libpq-dev \
-        gcc \
-        sudo \
-        git \
-        curl \
-        ca-certificates \
-        wget \
-        procps \
+# Install additional packages
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    libpq-dev \
+    curl \
+    wget \
+    procps \
     && rm -rf /var/lib/apt/lists/*
 
-# Set working directory
-WORKDIR /app
-
-# Create the user for devcontainer
-RUN groupadd --gid $USER_GID $USERNAME \
-    && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME \
-    && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME \
-    && chmod 0440 /etc/sudoers.d/$USERNAME
-
-# Install UV
-COPY --from=ghcr.io/astral-sh/uv:0.6.4 /uv /uvx /bin/
-
-# Configure UV for system-wide installation in container
-ENV UV_SYSTEM_PYTHON=/usr/local/bin/python
-ENV UV_CACHE_DIR=/app/.cache/uv
-ENV UV_LINK_MODE=copy
-ENV UV_COMPILE_BYTECODE=1
-
-# Create cache directory
-RUN mkdir -p $UV_CACHE_DIR && \
-    chmod -R 777 $UV_CACHE_DIR
-
 # Install Supabase CLI
-RUN wget -O supabase.deb https://github.com/supabase/cli/releases/download/v1.145.4/supabase_1.145.4_linux_amd64.deb \
-    && dpkg -i supabase.deb \
-    && rm supabase.deb
+RUN curl -fsSL https://get.supabase.io/apt | bash \
+    && apt-get update \
+    && apt-get install -y supabase \
+    && rm -rf /var/lib/apt/lists/*
 
-# Make sure the user owns everything in /app
-RUN chown -R $USERNAME:$USERNAME /app
+# Install UV for package management
+RUN curl -fsSL https://astral.sh/uv/install.sh | bash \
+    && mv ~/.cargo/bin/uv /usr/local/bin/ \
+    && chmod +x /usr/local/bin/uv
 
-# Switch to non-root user
-USER $USERNAME
+# Make sure entrypoint script is executable
+RUN echo "#!/bin/bash\n\n# Execute passed CMD\nexec \"\$@\"" > /usr/local/bin/entrypoint.sh \
+    && chmod +x /usr/local/bin/entrypoint.sh
 
-# Keep container running
+# Switch to vscode user is done automatically by the base image
+
+ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 CMD ["sleep", "infinity"]
