added pre-commit hook for json

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,5 +25,7 @@
   },
   "postCreateCommand": "pip install -e ./backend && pip install pre-commit && pre-commit install",
   "remoteUser": "vscode",
-  "runArgs": ["--init"]
+  "runArgs": [
+    "--init"
+  ]
 }
