--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,6 @@ repos:
       - id: check-toml
       - id: check-yaml
       - id: sort-simple-yaml
-      # Réactivation des hooks JSON
       - id: check-json
       - id: pretty-format-json
         args: [--autofix, --no-sort-keys ]
@@ -19,13 +18,13 @@ repos:
       - id: trailing-whitespace
       - id: detect-private-key
 
-  # Temporarily disable codespell
-  # - repo: https://github.com/codespell-project/codespell
-  #   rev: v2.4.1
-  #   hooks:
-  #     - id: codespell
-  #       args: [--write-changes, --ignore-words=.github/codespell-ignore.txt]
-  #       files: \.(py|sh|json|yml|yaml|md)$
+  # Réactivation de codespell avec une meilleure configuration
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.4.1
+    hooks:
+      - id: codespell
+        args: [--write-changes, --ignore-words=.github/codespell-ignore.txt]
+        files: \.(py|sh|json|yml|yaml|md)$
 
   # Temporarily disable ruff
   # - repo: https://github.com/astral-sh/ruff-pre-commit
