--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, develop ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, develop ]
 
 jobs:
   lint:
@@ -34,11 +34,16 @@ jobs:
       - name: Install dependencies
         run: |
           pip install uv
+          # Créer un environnement virtuel
+          uv venv
+          source .venv/bin/activate
+          # Installer les dépendances
           uv pip install pytest pytest-cov
           cd backend
           uv pip install -e .
       - name: Run tests with coverage
         run: |
+          source .venv/bin/activate
           cd backend
           pytest --cov=app --cov-report=xml
       - name: Upload coverage reports to Codecov
@@ -47,11 +52,24 @@ jobs:
           file: ./backend/coverage.xml
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        continue-on-error: true
 
   build:
     runs-on: ubuntu-latest
     needs: test
     steps:
       - uses: actions/checkout@v4
+      - name: Check if Dockerfile exists
+        id: check_dockerfile
+        run: |
+          if [ -f "Dockerfile" ]; then
+            echo "dockerfile_exists=true" >> $GITHUB_OUTPUT
+          else
+            echo "dockerfile_exists=false" >> $GITHUB_OUTPUT
+          fi
       - name: Build Docker image
+        if: steps.check_dockerfile.outputs.dockerfile_exists == 'true'
         run: docker build -t fastapi-supabase-template:${{ github.sha }} .
+      - name: Skip Docker build
+        if: steps.check_dockerfile.outputs.dockerfile_exists != 'true'
+        run: echo "Skipping Docker build because Dockerfile doesn't exist at the root directory"
