--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,22 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
+      - name: Create test environment file
+        run: |
+          cat > .env.test << EOF
+          # Variables d'environnement factices pour les tests CI
+          SUPABASE_URL=https://example.supabase.co
+          SUPABASE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRlc3QiLCJyb2xlIjoiYW5vbiIsImlhdCI6MTY0MjA3MTU5OCwiZXhwIjoxOTU3NjQ3NTk4fQ.test_key
+          POSTGRES_SERVER=localhost
+          POSTGRES_USER=postgres
+          POSTGRES_PASSWORD=postgres
+          POSTGRES_DB=app_test
+          FIRST_SUPERUSER=admin@example.com
+          FIRST_SUPERUSER_PASSWORD=admin12345
+          EOF
+          
+          echo "Created .env.test file with test variables"
+          cat .env.test
       - name: Install dependencies
         run: |
           pip install uv
