--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,7 +27,7 @@
       ]
     }
   },
-  "postCreateCommand": "pip install -e ./backend && pip install pre-commit python-dotenv PyGithub && pre-commit install",
+  "postCreateCommand": "pip install -e ./backend && pip install pre-commit python-dotenv>=1.0.0 PyGithub>=1.58.0 && pre-commit install",
   "remoteUser": "vscode",
   "runArgs": [
     "--init"
