few fixes to make devcontainer work again, with pre-commit. Also added clean-docker script to make easier to rebuild devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,41 +1,67 @@
 {
   "name": "FastAPI Supabase Development",
+  "runArgs": [
+    "--network=host"
+  ],
   "build": {
-    "dockerfile": "Dockerfile.dev",
-    "context": ".."
+    "dockerfile": "../Dockerfile",
+    "context": "..",
+    "args": {
+      "USERNAME": "vscode",
+      "USER_UID": "1000",
+      "USER_GID": "1000",
+      "BUILD_ENV": "dev"
+    }
+  },
+  "containerEnv": {
+    "PYTHONPATH": "/app",
+    "UV_CACHE_DIR": "/app/.cache/uv",
+    "UV_SYSTEM_PYTHON": "/usr/local/bin/python",
+    "UV_LINK_MODE": "copy"
   },
   "customizations": {
     "vscode": {
       "settings": {
+        "terminal.integrated.defaultProfile.linux": "bash",
+        "terminal.integrated.profiles.linux": {
+          "bash": {
+            "path": "bash",
+            "icon": "terminal-bash"
+          }
+        },
+        "git.autofetch": true,
+        "git.autofetchPeriod": 3600,
         "python.defaultInterpreterPath": "/usr/local/bin/python",
+        "python.analysis.extraPaths": [
+          "/app"
+        ],
         "python.linting.enabled": true,
         "python.linting.flake8Enabled": true,
         "python.formatting.provider": "black",
         "editor.formatOnSave": true,
         "editor.codeActionsOnSave": {
           "source.organizeImports": true
-        },
-        "terminal.integrated.env.linux": {
-          "PYTHONPATH": "/workspaces/fastapi_supabase_template"
         }
       },
       "extensions": [
         "ms-python.python",
-        "ms-python.vscode-pylance",
         "ms-python.black-formatter",
+        "ms-python.flake8",
         "github.vscode-github-actions"
       ]
     }
   },
-  "postCreateCommand": "pip install -e ./backend && pip install pre-commit python-dotenv>=1.0.0 PyGithub>=1.58.0 && pre-commit install",
-  "remoteUser": "vscode",
-  "runArgs": [
-    "--init"
-  ],
-  "mounts": [
-    "source=${localEnv:HOME}${localEnv:USERPROFILE}/.gitconfig,target=/home/vscode/.gitconfig,type=bind,consistency=cached"
-  ],
   "features": {
-    "ghcr.io/devcontainers/features/github-cli:1": {}
-  }
+    "ghcr.io/devcontainers/features/git:1": {
+      "version": "latest",
+      "ppa": true
+    }
+  },
+  "workspaceFolder": "/app",
+  "workspaceMount": "source=${localWorkspaceFolder},target=/app,type=bind,consistency=cached",
+  "remoteUser": "vscode",
+  "mounts": [
+    "source=uv-cache,target=/app/.cache/uv,type=volume"
+  ],
+  "postCreateCommand": "git config --global --add safe.directory . && pre-commit install"
 }
