--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          uv pip install pre-commit
-          uv pip install -e .
+          uv pip install pre-commit --sytem
+          uv pip install -e . --system
 
       - name: Run pre-commit checks
         run: pre-commit run --all-files
