--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -71,8 +71,25 @@ jobs:
           uv run bash scripts/pre-start.sh
           uv run bash scripts/tests-start.sh
 
+      - name: Debug environment variables
+        run: |
+          echo "PROJECT_NAME exists: $([[ -n "${{ secrets.PROJECT_NAME }}" ]] && echo 'Yes' || echo 'No')"
+          echo "SUPABASE_URL exists: $([[ -n "${{ secrets.SUPABASE_URL }}" ]] && echo 'Yes' || echo 'No')"
+          echo "SUPABASE_KEY exists: $([[ -n "${{ secrets.SUPABASE_KEY }}" ]] && echo 'Yes' || echo 'No')"
+          echo "POSTGRES_SERVER exists: $([[ -n "${{ secrets.POSTGRES_SERVER }}" ]] && echo 'Yes' || echo 'No')"
+          echo "POSTGRES_USER exists: $([[ -n "${{ secrets.POSTGRES_USER }}" ]] && echo 'Yes' || echo 'No')"
+          echo "FIRST_SUPERUSER exists: $([[ -n "${{ secrets.FIRST_SUPERUSER }}" ]] && echo 'Yes' || echo 'No')"
+          echo "FIRST_SUPERUSER_PASSWORD exists: $([[ -n "${{ secrets.FIRST_SUPERUSER_PASSWORD }}" ]] && echo 'Yes' || echo 'No')"
+
       - name: Run tests with coverage
         run: |
+          echo "PROJECT_NAME=${{ secrets.PROJECT_NAME }}" > .env.test
+          echo "SUPABASE_URL=${{ secrets.SUPABASE_URL }}" >> .env.test
+          echo "SUPABASE_KEY=${{ secrets.SUPABASE_KEY }}" >> .env.test
+          echo "POSTGRES_SERVER=${{ secrets.POSTGRES_SERVER }}" >> .env.test
+          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env.test
+          echo "FIRST_SUPERUSER=${{ secrets.FIRST_SUPERUSER }}" >> .env.test
+          echo "FIRST_SUPERUSER_PASSWORD=${{ secrets.FIRST_SUPERUSER_PASSWORD }}" >> .env.test
           cd backend
           uv pip install pytest pytest-cov
           uv run python -m pytest --cov=app --cov-report=xml
